// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover should pass additional props to portaled element 1`] = `
<span>
  <div
    class="components-popover components-animate__appear is-from-left is-from-top"
    role="tooltip"
    style="position: absolute;"
    tabindex="-1"
  >
    <div
      class="components-popover__content"
    >
      <div
        style="position: absolute; min-width: 100%;"
      >
        <div
          aria-hidden="true"
          style="position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; pointer-events: none; opacity: 0; overflow: hidden; z-index: -1;"
        />
        Hello
      </div>
    </div>
  </div>
</span>
`;

exports[`Popover should render content 1`] = `
<span>
  <div
    class="components-popover components-animate__appear is-from-left is-from-top"
    style="position: absolute;"
    tabindex="-1"
  >
    <div
      class="components-popover__content"
    >
      <div
        style="position: absolute; min-width: 100%;"
      >
        <div
          aria-hidden="true"
          style="position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; pointer-events: none; opacity: 0; overflow: hidden; z-index: -1;"
        />
        Hello
      </div>
    </div>
  </div>
</span>
`;
